Added a label for the machine description to the program runner view. This could be helpful for people who want to store their machine settings in the description field and have it at the ready when exercising.
Code quality might not yet be on par since I only quickly added this for
personal use.

--- a/app/src/main/res/layout/row_fonte.xml
+++ b/app/src/main/res/layout/row_fonte.xml
@@ -75,6 +75,17 @@
                         app:autoSizeTextType="uniform"
                         tool:text="Machine dddsfdfsdfsdfsdfdddsfdfsdfsdfsdf" />
 
+                    <TextView
+                        android:id="@+id/MACHINE_DESCRIPTION"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+
+                        android:ellipsize="end"
+                        android:gravity="center_vertical"
+                        android:singleLine="true"
+                        android:textSize="10sp"
+                        tool:text="Machine dddsfdfsdfsdfsdfdddsfdfsdfsdfsdf" />
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
